vlib/v/parser/tests/comptime_veb_without_import_veb_err.vv
fn main() {
	$veb.html('index.html')
}
